actulice mi pagina personal

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <!-- Añade más cursos aquí -->
     </ul>
     
-    <h2>Compañeros de Grupo</h2>
+    <h2>Integrantes  de Grupo</h2>
     <ul>
-        <li><a href="enlace_a_pagina_de_amigo1">Amigo 1</a></li>
-        <li><a href="enlace_a_pagina_de_amigo2">Amigo 2</a></li>
-        <li><a href="enlace_a_pagina_de_amigo3">Amigo 3</a></li>
+        <li><a href="enlace_a_pagina_de_amigo1">jesus  Q. V </a></li>
+        <li><a href="https://github.com/JESUS-QV/Jesus-QV.github.io">Dayana verapinto </a></li>
+        <li><a href="enlace_a_pagina_de_amigo3">jhon romero </a></li>
         <!-- Añade más compañeros aquí -->
     </ul>
 </body>
