actualizando mi pagina

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <h2>Integrantes  de Grupo</h2>
     <ul>
-        <li><a href="enlace_a_pagina_de_amigo1">jesus  Q. V </a></li>
+        <li><a href=" https://jesus-qv.github.io/">jesus  Q. V </a></li>
         <li><a href="https://github.com/JESUS-QV/Jesus-QV.github.io">Dayana verapinto </a></li>
         <li><a href="enlace_a_pagina_de_amigo3">jhon romero </a></li>
         <!-- Añade más compañeros aquí -->
