actulice mi pagina

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Nombre Completo</title>
+    <title>PAGINA DE DAYANA VEREAPINTO </title>
 </head>
 <body>
-    <h1>Tu Nombre Completo</h1>
-    <h2>Datos Generales</h2>
+    <h1>Dayana Verapinto</h1>
+    <h2>Estudio contabilidada</h2>
     <p>Aquí puedes poner información sobre ti, como tu edad, tu ciudad, etc.</p>
     
     <h2>Carrera</h2>
